test/JDBC/sql_expected/1034_1.out

-- simple batch start
CREATE TABLE t1034
(
 c1 int
,c2 int
)
GO

GO

CREATE TRIGGER tr1034
ON t1034
FOR UPDATE, UPDATE
AS
SELECT 1
GO
~~ERROR (Code: 1034)~~

~~ERROR (Message: Syntax error: Duplicate specification of the action "UPDATE" in the trigger declaration.)~~

DROP TABLE t1034
GO

SET XACT_ABORT ON;
GO

begin transaction
GO
CREATE TABLE t1034
(
 c1 int
,c2 int
)
GO

GO

CREATE TRIGGER tr1034
ON t1034
FOR UPDATE, UPDATE
AS
SELECT 1
GO
~~ERROR (Code: 1034)~~

~~ERROR (Message: Syntax error: Duplicate specification of the action "UPDATE" in the trigger declaration.)~~



if (@@trancount > 0) select cast('Does not respect xact_abort flag' as text) else select cast('Respects xact_abort flag' as text)
GO
~~START~~
text
Does not respect xact_abort flag
~~END~~


if (@@trancount > 0) rollback tran
GO

DROP TABLE t1034
GO
~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the table 't1034', because it does not exist or you do not have permission.)~~


SET XACT_ABORT OFF;
GO

